[FIX] github-corner on mobile devices

--- a/examples/githubcorner.css
+++ b/examples/githubcorner.css
@@ -2,7 +2,7 @@
 a.icss-github-corner,
 a.icss-github-corner-left {
     font-size: 2em;
-    position: absolute;
+    position: fixed;
     top:0;
     right: 0;
     z-index: 1000;
